exports[`test renders ./components/menu/demo/horizontal.md correctly 1`] = `
<ul
  aria-activedescendant=""
  class="ant-menu ant-menu-horizontal  ant-menu-light ant-menu-root"
  role="menu"
  tabindex="0">
  <li
    aria-selected="true"
    class="ant-menu-item-selected ant-menu-item"
    role="menuitem">
    <i
      class="anticon anticon-mail" />
    Navigation One
  </li>
  <li
    aria-disabled="true"
    aria-selected="false"
    class="ant-menu-item-disabled ant-menu-item"
    role="menuitem">
    <i
      class="anticon anticon-appstore" />
    Navigation Two
  </li>
  <li
    class="ant-menu-submenu-horizontal ant-menu-submenu">
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-owns="item_2$Menu"
      class="ant-menu-submenu-title">
      <span>
        <i
          class="anticon anticon-setting" />
        Navigation Three - Submenu
      </span>
    </div>
  </li>
  <li
    aria-selected="false"
    class="ant-menu-item"
    role="menuitem">
    <a
      href="https://ant.design"
      rel="noopener noreferrer"
      target="_blank">
      Navigation Four - Link
    </a>
  </li>
</ul>
`;

exports[`test renders ./components/menu/demo/sider.md correctly 1`] = `
<ul
  aria-activedescendant=""
  class="ant-menu ant-menu-inline  ant-menu-light ant-menu-root"
  role="menu"
  style="width:240px;"
  tabindex="0">
  <li
    class="ant-menu-submenu-inline ant-menu-submenu-open ant-menu-submenu-selected ant-menu-submenu">
    <div
      aria-expanded="true"
      aria-haspopup="true"
      aria-owns="sub1$Menu"
      class="ant-menu-submenu-title"
      style="padding-left:24px;">
      <span>
        <i
          class="anticon anticon-mail" />
        <span>
          Navigation One
        </span>
      </span>
    </div>
    <ul
      aria-activedescendant=""
      class="ant-menu ant-menu-inline  ant-menu-sub"
      id="sub1$Menu"
      role="menu">
      <li
        class=" ant-menu-item-group">
        <div
          class="ant-menu-item-group-title">
          Item 1
        </div>
        <ul
          class="ant-menu-item-group-list">
          <li
            aria-selected="true"
            class="ant-menu-item-selected ant-menu-item"
            role="menuitem"
            style="padding-left:48px;">
            Option 1
          </li>
          <li
            aria-selected="false"
            class="ant-menu-item"
            role="menuitem"
            style="padding-left:48px;">
            Option 2
          </li>
        </ul>
      </li>
      <li
        class=" ant-menu-item-group">
        <div
          class="ant-menu-item-group-title">
          Item 2
        </div>
        <ul
          class="ant-menu-item-group-list">
          <li
            aria-selected="false"
            class="ant-menu-item"
            role="menuitem"
            style="padding-left:48px;">
            Option 3
          </li>
          <li
            aria-selected="false"
            class="ant-menu-item"
            role="menuitem"
            style="padding-left:48px;">
            Option 4
          </li>
        </ul>
      </li>
    </ul>
  </li>
  <li
    class="ant-menu-submenu-inline ant-menu-submenu">
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-owns="sub2$Menu"
      class="ant-menu-submenu-title"
      style="padding-left:24px;">
      <span>
        <i
          class="anticon anticon-appstore" />
        <span>
          Navigation Two
        </span>
      </span>
    </div>
  </li>
  <li
    class="ant-menu-submenu-inline ant-menu-submenu">
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-owns="sub4$Menu"
      class="ant-menu-submenu-title"
      style="padding-left:24px;">
      <span>
        <i
          class="anticon anticon-setting" />
        <span>
          Navigation Three
        </span>
      </span>
    </div>
  </li>
</ul>
`;

exports[`test renders ./components/menu/demo/sider-current.md correctly 1`] = `
<ul
  aria-activedescendant=""
  class="ant-menu ant-menu-inline  ant-menu-light ant-menu-root"
  role="menu"
  style="width:240px;"
  tabindex="0">
  <li
    class="ant-menu-submenu-inline ant-menu-submenu-selected ant-menu-submenu">
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-owns="sub1$Menu"
      class="ant-menu-submenu-title"
      style="padding-left:24px;">
      <span>
        <i
          class="anticon anticon-mail" />
        <span>
          Navigation One
        </span>
      </span>
    </div>
  </li>
  <li
    class="ant-menu-submenu-inline ant-menu-submenu">
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-owns="sub2$Menu"
      class="ant-menu-submenu-title"
      style="padding-left:24px;">
      <span>
        <i
          class="anticon anticon-appstore" />
        <span>
          Navigation Two
        </span>
      </span>
    </div>
  </li>
  <li
    class="ant-menu-submenu-inline ant-menu-submenu">
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-owns="sub4$Menu"
      class="ant-menu-submenu-title"
      style="padding-left:24px;">
      <span>
        <i
          class="anticon anticon-setting" />
        <span>
          Navigation Three
        </span>
      </span>
    </div>
  </li>
</ul>
`;

exports[`test renders ./components/menu/demo/switch-mode.md correctly 1`] = `
<div>
  <span
    class="ant-switch"
    tabindex="0">
    <span
      class="ant-switch-inner" />
  </span>
  <br />
  <br />
  <ul
    aria-activedescendant=""
    class="ant-menu ant-menu-inline  ant-menu-light ant-menu-root"
    role="menu"
    style="width:240px;"
    tabindex="0">
    <li
      class="ant-menu-submenu-inline ant-menu-submenu-open ant-menu-submenu">
      <div
        aria-expanded="true"
        aria-haspopup="true"
        aria-owns="sub1$Menu"
        class="ant-menu-submenu-title"
        style="padding-left:24px;">
        <span>
          <i
            class="anticon anticon-mail" />
          <span>
            Navigation One
          </span>
        </span>
      </div>
      <ul
        aria-activedescendant=""
        class="ant-menu ant-menu-inline  ant-menu-sub"
        id="sub1$Menu"
        role="menu">
        <li
          class=" ant-menu-item-group">
          <div
            class="ant-menu-item-group-title">
            Item 1
          </div>
          <ul
            class="ant-menu-item-group-list">
            <li
              aria-selected="false"
              class="ant-menu-item"
              role="menuitem"
              style="padding-left:48px;">
              Option 1
            </li>
            <li
              aria-selected="false"
              class="ant-menu-item"
              role="menuitem"
              style="padding-left:48px;">
              Option 2
            </li>
          </ul>
        </li>
        <li
          class=" ant-menu-item-group">
          <div
            class="ant-menu-item-group-title">
            Item 2
          </div>
          <ul
            class="ant-menu-item-group-list">
            <li
              aria-selected="false"
              class="ant-menu-item"
              role="menuitem"
              style="padding-left:48px;">
              Option 3
            </li>
            <li
              aria-selected="false"
              class="ant-menu-item"
              role="menuitem"
              style="padding-left:48px;">
              Option 4
            </li>
          </ul>
        </li>
      </ul>
    </li>
    <li
      class="ant-menu-submenu-inline ant-menu-submenu">
      <div
        aria-expanded="false"
        aria-haspopup="true"
        aria-owns="sub2$Menu"
        class="ant-menu-submenu-title"
        style="padding-left:24px;">
        <span>
          <i
            class="anticon anticon-appstore" />
          <span>
            Navigation Two
          </span>
        </span>
      </div>
    </li>
    <li
      class="ant-menu-submenu-inline ant-menu-submenu">
      <div
        aria-expanded="false"
        aria-haspopup="true"
        aria-owns="sub4$Menu"
        class="ant-menu-submenu-title"
        style="padding-left:24px;">
        <span>
          <i
            class="anticon anticon-setting" />
          <span>
            Navigation Three
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`test renders ./components/menu/demo/theme.md correctly 1`] = `
<div>
  <span
    checked=""
    class="ant-switch ant-switch-checked"
    tabindex="0">
    <span
      class="ant-switch-inner">
      Dark
    </span>
  </span>
  <br />
  <br />
  <ul
    aria-activedescendant=""
    class="ant-menu ant-menu-inline  ant-menu-dark ant-menu-root"
    role="menu"
    style="width:240px;"
    tabindex="0">
    <li
      class="ant-menu-submenu-inline ant-menu-submenu-open ant-menu-submenu-selected ant-menu-submenu">
      <div
        aria-expanded="true"
        aria-haspopup="true"
        aria-owns="sub1$Menu"
        class="ant-menu-submenu-title"
        style="padding-left:24px;">
        <span>
          <i
            class="anticon anticon-mail" />
          <span>
            Navigation One
          </span>
        </span>
      </div>
      <ul
        aria-activedescendant=""
        class="ant-menu ant-menu-inline  ant-menu-sub"
        id="sub1$Menu"
        role="menu">
        <li
          aria-selected="true"
          class="ant-menu-item-selected ant-menu-item"
          role="menuitem"
          style="padding-left:48px;">
          Option 1
        </li>
        <li
          aria-selected="false"
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:48px;">
          Option 2
        </li>
        <li
          aria-selected="false"
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:48px;">
          Option 3
        </li>
        <li
          aria-selected="false"
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:48px;">
          Option 4
        </li>
      </ul>
    </li>
    <li
      class="ant-menu-submenu-inline ant-menu-submenu">
      <div
        aria-expanded="false"
        aria-haspopup="true"
        aria-owns="sub2$Menu"
        class="ant-menu-submenu-title"
        style="padding-left:24px;">
        <span>
          <i
            class="anticon anticon-appstore" />
          <span>
            Navigtion Two
          </span>
        </span>
      </div>
    </li>
    <li
      class="ant-menu-submenu-inline ant-menu-submenu">
      <div
        aria-expanded="false"
        aria-haspopup="true"
        aria-owns="sub4$Menu"
        class="ant-menu-submenu-title"
        style="padding-left:24px;">
        <span>
          <i
            class="anticon anticon-setting" />
          <span>
            Navigation Three
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`test renders ./components/menu/demo/vertical.md correctly 1`] = `
<ul
  aria-activedescendant=""
  class="ant-menu ant-menu-vertical  ant-menu-light ant-menu-root"
  role="menu"
  style="width:240px;"
  tabindex="0">
  <li
    class="ant-menu-submenu-vertical ant-menu-submenu">
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-owns="sub1$Menu"
      class="ant-menu-submenu-title">
      <span>
        <i
          class="anticon anticon-mail" />
        <span>
          Navigation One
        </span>
      </span>
    </div>
  </li>
  <li
    class="ant-menu-submenu-vertical ant-menu-submenu">
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-owns="sub2$Menu"
      class="ant-menu-submenu-title">
      <span>
        <i
          class="anticon anticon-appstore" />
        <span>
          Navigation Two
        </span>
      </span>
    </div>
  </li>
  <li
    class="ant-menu-submenu-vertical ant-menu-submenu">
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-owns="sub4$Menu"
      class="ant-menu-submenu-title">
      <span>
        <icon
          type="setting" />
        <span>
          Navigation Three
        </span>
      </span>
    </div>
  </li>
</ul>
`;
